# 1brc

./: 1brc.md  Cargo.toml
src/: main.rs
